--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <groupId>groupId</groupId>
     <artifactId>AnimalsOlympics</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>LATEST</version>
+            <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -22,7 +22,9 @@
     </dependencies>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    
 </project>
