添加AOP模式, 引入了Spring框架的一个包

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.2.9.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <properties>
