--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,25 @@ AnimalsOlympics.iml
 .classpath
 
 ignore
+
+# Gradle
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+
+# macOS
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
